package main;

public interface IArgumentProcesser {

    void processArgument(String argument);
}
