package main;

public interface IExitListener {

    void waitForExit();
}
